<resources>
    <string name="app_name">SairaAsia Interiors</string>
    <string name="logo">Logo</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="new_user">New User?</string>
    <string name="_1">1</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="akshay_kumar">Akshay Kumar</string>
    <string name="attandance">Attandance</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="halfleave">HalfLeave</string>
    <string name="fullleave">FullLeave</string>
    <string name="note_late_time">Note late time</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="xyz">XYZ</string>
    <string name="fullname">Fullname</string>
    <string name="add_member">Add Member</string>
    <string name="confirm">Confirm</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="date">Date</string>
    <string name="work">Work</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>