<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/emp_record_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".Activities.Attendance"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/emp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attandance"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="20dp">

                    <RadioButton
                        android:id="@+id/present_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/present"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:padding="5dp"
                        android:theme="@style/CheckBox" />

                    <RadioButton
                        android:id="@+id/absent_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/absent"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:theme="@style/CheckBox" />

                    <RadioButton
                        android:id="@+id/half_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="23sp"
                        android:theme="@style/CheckBox"
                        android:textColor="@color/black"
                        android:text="@string/halfleave"/>

                    <RadioButton
                        android:id="@+id/full_radio"
                        android:padding="5dp"
                        android:textSize="23sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:theme="@style/CheckBox"
                        android:text="@string/fullleave" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/confirm"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>

    </LinearLayout>

</LinearLayout>