<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/emp_record_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/emp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/akshay_kumar"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />


        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attandance"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:textSize="23sp"
                android:theme="@style/CheckBox"
                android:textColor="@color/black"
                android:text="@string/present"/>

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textSize="23sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:theme="@style/CheckBox"
                android:text="@string/absent" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/halfleave"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:theme="@style/CheckBox" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/fullleave"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:theme="@style/CheckBox" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/note_late_time"
                    android:textColorHint="@color/black"
                    android:maxLines="1"
                    android:inputType="textPhonetic"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



    </LinearLayout>




</FrameLayout>