<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/logCon"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/login_progessbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/textView7"
            android:layout_width="200dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/saira" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <View
                android:layout_width="5.6dp"
                android:layout_height="165dp"
                android:background="#F23838"
                android:layout_marginStart="14dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                    <TextView
                        android:layout_marginStart="60dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/welcome"
                        android:textColor="#DD0808"
                        android:textSize="25sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableStart="@drawable/ic_email"
                            android:id="@+id/email_login"
                            android:drawablePadding="10dp"
                            android:layout_width="280dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/e_mail"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="10dp"
                            android:id="@+id/password_login"
                            android:layout_width="280dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/ftpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="#DD0808"
                    android:textSize="15sp"
                    android:visibility="invisible" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="#F43B3B"
            android:text="@string/login"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/registertxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/register"
                android:textColor="#FFFD1616"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
