<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_margin="5dp"
        android:backgroundTint="#FBF7F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="25sp"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:textSize="25sp"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attandance"
                android:textSize="25sp"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>