<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reglayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/reg_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/saira" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textColor="#DD0808"
                android:textSize="30sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:orientation="horizontal"
                android:layout_marginStart="14dp">

                <View
                    android:layout_width="5.6dp"
                    android:layout_height="wrap_content"
                    android:background="#F23838" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullname_register"
                            android:drawableStart="@drawable/ic_person"
                            android:drawablePadding="10dp"
                            android:layout_width="280dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/fullname"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username_register"
                            android:drawableStart="@drawable/ic_id"
                            android:drawablePadding="10dp"
                            android:layout_width="280dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_register"
                            android:drawableStart="@drawable/ic_email"
                            android:drawablePadding="10dp"
                            android:layout_width="280dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/e_mail"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_register"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="10dp"
                            android:layout_width="280dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColorHint="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/regbutton"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="#FFFD1616"
                android:text="@string/register" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/create_new_account"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/logintxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#FFFD1616"
                    android:textSize="15sp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
